=== 0.2.1
  - Fix SQL and LVM checks

=== 0.2.0
  - Add Checkpoint app
  - Merged all configuration files to a single one
  - Major code refactoring
  - Improved tests

=== 0.1.2
[Bugs]
  - Fix snapshot creation process (remove memoization)
  - Check credentials when checking for MySQL

=== 0.1.1
[Bugs]
  - Fix snapshot creation process
  - Improve documentation

=== 0.1.0
[Features]
  - Add remote backup option
  - Remove extra AWS configuration file
  - Provide MySQL credentials in the configuration file
  - Check if run as root at application level
  - If log file can not be created, return STDOUT
  - Add `gemdir` command line option to return gem files path
  - Add configuration examples
  - Add CHANGELOG
[Bugs]
  - Clean up code
  - More tests
  - Improve documentation
  - Fix Rakefile


=== 0.0.2
[Bugs]
  - Minor code fixes


=== 0.0.1
Initial release