@@ -2,6 +2,5 @@ language: ruby
 rvm:
   - 1.9.3
   - 1.8.7
-  - ree
 script: "bundle exec rake spec"
 #script: "rvmsudo bundle exec rake spec"
