@@ -1,10 +1,5 @@
 module VGH
 
-  # Creates the snapshots
-  def snap_and_tag(*args)
-    EC2::Snapshot.new(*args)
-  end
-
 module EC2
 
 # Creates a snapshot of the specified volume.
@@ -20,13 +15,11 @@ class Snapshot
   # @param [String] description The description for the new snapshot
   # @param [Hash] tags A Hash containing the names and values of the tags
   # @return [Snapshot] The Snapshot object.
-  def initialize(volume_id, description, tags)
+  def snap_and_tag(volume_id, description, tags)
     @volume_id   = volume_id
     @description = description
     @tags        = tags
     create_snapshot
-    tag_snapshot
-    purge_backups
     return snapshot
   end
 
@@ -48,6 +41,7 @@ class Snapshot
     @snapshot = ec2.volumes[volume_id].
       create_snapshot("#{description}")
     message.info "Created snapshot \"#{snapshot.id}\""
+    tag_snapshot
     return @snapshot
   end
 
@@ -61,9 +55,17 @@ class Snapshot
   end
 
   # Purges expired snapshots
-  def purge_backups
-    expired_backups.each do |snap|
+  def purge_backups_for(*args)
+    expired_backups_for(*args).each do |snap|
       message.info "Deleting expired snapshot (#{snap.id})"
+      snap.delete
+    end
+  end
+
+  # Purges expired snapshots
+  def purge_checkpoints_for(*args)
+    expired_checkpoints_for(*args).each do |snap|
+      message.info "Deleting checkpoint (#{snap.id})"
       snap.delete
     end
   end
@@ -71,14 +73,24 @@ class Snapshot
   # Creates a list of expired snapshots according to the expiration time
   # specified in the app's configuration file
   # @return [Array] An array of expired snapshot objects
-  def expired_backups
+  def expired_backups_for(vid)
     @expired_backups = []
-    all_backups.each {|snap|
-      if snap.start_time < (Time.now - backup_expiration*24*60*60)
-        @expired_backups.push snap
-      end
-    }
+    all_backups.tagged('BACKUP').tagged_values(vid).
+      each {|snap|
+        if snap.start_time < (Time.now - backup_expiration*24*60*60)
+          @expired_backups.push snap
+        end
+      }
     return @expired_backups
+  end
+
+  # Creates a list of checkpoints that should be purged
+  # @return [Array] An array of snapshot objects
+  def expired_checkpoints_for(vid)
+    @expired_checkpoints = all_backups.
+      tagged('CHECKPOINT').tagged_values(vid).
+      sort_by(&:start_time).reverse.
+      drop(checkpoints_to_keep)
   end
 
   # Check for a an expiration period in the configuration file
@@ -90,6 +102,17 @@ class Snapshot
       @backup_expiration = expiration
     end
     return @backup_expiration.to_i
+  end
+
+  # How many checkpoints should be kept
+  def checkpoints_to_keep
+    keep = config[:checkpoints]
+    if keep.nil?
+      @checkpoints_to_keep = 5
+    else
+      @checkpoints_to_keep = keep
+    end
+    return @checkpoints_to_keep.to_i
   end
 
   # Returns a list of snapshots that are named the same with the current FQDN.
